@@ -770,6 +770,21 @@ argument_list|)
 expr_stmt|;
 name|registerUDF
 argument_list|(
+literal|"parse_url"
+argument_list|,
+name|UDFParseUrl
+operator|.
+name|class
+argument_list|,
+name|OperatorType
+operator|.
+name|PREFIX
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|registerUDF
+argument_list|(
 literal|"positive"
 argument_list|,
 name|UDFOPPositive
